# guangzhou-trae-bitebook

./: .gitignore  .vercelignore  LICENSE  README.md  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
app/: config.py  db.py  main.py
app/api/: books.py  upload.py
app/model/: analysis_item.py  book.py  book_meta.py  doc_text.py  explanation.py  question.py  task_log.py
app/repository/: analysis_item_repository.py  book_meta_queries.py  book_meta_repository.py  book_repository.py  doc_text_repository.py  explanation_repository.py  question_repository.py  task_log_repository.py
app/schema/: book.py  book_meta.py
app/service/: ai_client.py  book_service.py  task_service.py  upload_service.py
front/: .vercelignore  package-lock.json  package.json
front/src/: App.vue  main.ts  shims-pdfjs.d.ts
front/src/router/: index.ts
front/src/services/: api.ts  books.ts  questions.ts
front/src/types/: book.ts
front/src/views/: BookDetail.vue  BookQuestions.vue  BooksList.vue
