[project]
name = "bitebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.9",
    "pymupdf>=1.26.6",
    "dashscope>=1.25.1",
]
